Update page - housing-and-homelessness.html 4172481f1f24689a26e7645b79445e1643989ce7

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -2274,7 +2274,7 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
         height: 400,
         width: this.nbr_bars * 120,
         margin: {
-          top: 90,
+          top: 60,
           right: 10,
           bottom: 52,
           left: 10,
@@ -2286,7 +2286,7 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
         height: 400,
         width: this.nbr_bars * 120,
         margin: {
-          top: 90,
+          top: 60,
           right: 10,
           bottom: 52,
           left: 10,
@@ -2298,7 +2298,7 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
         height: 400,
         width: this.nbr_bars * 90,
         margin: {
-          top: 90,
+          top: 60,
           right: 10,
           bottom: 52,
           left: 10,
@@ -2310,7 +2310,7 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
         height: 400,
         width: this.nbr_bars * 90,
         margin: {
-          top: 90,
+          top: 60,
           right: 10,
           bottom: 52,
           left: 10,
@@ -2572,7 +2572,8 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
       // this.translationsObj.footerDisplayDate = footerDisplayText;
       d3.select(this.querySelector(".chart-data-label")).text(footerDisplayText);
 
-      let max_y = d3.max(data, d => d.FIRST_DOSE_RATIO);
+      let max_y = d3.max(data, d => Math.max(d.FIRST_DOSE_RATIO,d.COMPLETED_DOSE_RATIO));
+
       d3.select(this.querySelector("svg"))
       .attr("viewBox", [
                         0,
