--- a/zh-hans/vaccines/index.html
+++ b/zh-hans/vaccines/index.html
@@ -2084,7 +2084,7 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
         height: 400,
         width: this.nbr_bars * 120,
         margin: {
-          top: 90,
+          top: 60,
           right: 10,
           bottom: 52,
           left: 10,
@@ -2096,7 +2096,7 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
         height: 400,
         width: this.nbr_bars * 120,
         margin: {
-          top: 90,
+          top: 60,
           right: 10,
           bottom: 52,
           left: 10,
@@ -2108,7 +2108,7 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
         height: 400,
         width: this.nbr_bars * 90,
         margin: {
-          top: 90,
+          top: 60,
           right: 10,
           bottom: 52,
           left: 10,
@@ -2120,7 +2120,7 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
         height: 400,
         width: this.nbr_bars * 90,
         margin: {
-          top: 90,
+          top: 60,
           right: 10,
           bottom: 52,
           left: 10,
@@ -2382,7 +2382,8 @@ class CAGovVaccinesHPIPeople extends window.HTMLElement {
       // this.translationsObj.footerDisplayDate = footerDisplayText;
       d3.select(this.querySelector(".chart-data-label")).text(footerDisplayText);
 
-      let max_y = d3.max(data, d => d.FIRST_DOSE_RATIO);
+      let max_y = d3.max(data, d => Math.max(d.FIRST_DOSE_RATIO,d.COMPLETED_DOSE_RATIO));
+
       d3.select(this.querySelector("svg"))
       .attr("viewBox", [
                         0,
