ADD pages/guidancefeed/cdph/ec1e5d134eb2d5fee9470dd6e6e60d11.html 4cd52ed77c6f211c8cbc6e29f847b329a49a3ebc

--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;17 de marzo de 2021 a las 1:19 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;17 de marzo de 2021 a las 1:27 p. m.</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--455fc5b35f1b8589a7ccce15e584affa -->March 16, 2021</small></p>
           <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-091.aspx" lang="en-US" hreflang="en-US" rel="external">​CDPH Launches &quot;Let's Get to ImmUnity&quot; Campaign to Boost COVID-19 Vaccine Acceptance</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--ec1e5d134eb2d5fee9470dd6e6e60d11 -->March 16, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) announced a new public education campaign under its Vaccinate ALL 58 effort to ramp up the connections being made with Californians who have been disproportionatel...</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
