--- a/vi/latest-news/index.html
+++ b/vi/latest-news/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tin tức mới nhất về COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;17 tháng 3, 2021 lúc 13:19</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;17 tháng 3, 2021 lúc 13:27</p>
           
         </div>
       </div>
@@ -173,6 +173,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--455fc5b35f1b8589a7ccce15e584affa -->March 16, 2021</small></p>
           <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-091.aspx" lang="en-US" hreflang="en-US" rel="external">​CDPH Launches &quot;Let's Get to ImmUnity&quot; Campaign to Boost COVID-19 Vaccine Acceptance</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--ec1e5d134eb2d5fee9470dd6e6e60d11 -->March 16, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) announced a new public education campaign under its Vaccinate ALL 58 effort to ramp up the connections being made with Californians who have been disproportionatel...</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
