--- a/state-dashboard/index.html
+++ b/state-dashboard/index.html
@@ -534,7 +534,7 @@
 
 <div class="bg-lightblue full-bleed mb-0">
   <div class="container pt-4 pb-5">
-    <h2 class="text-center color-orange">Infections by group</h2>
+    <h2 class="text-center color-primary">Infections by group</h2>
     <div class="col-lg-12 bg-white px-4 py-4">
       <div class="d-flex flex-column flex-md-row justify-content-center my-3">
         <div class="large-tabs">
