--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -500,7 +500,7 @@ addtositemap: true
 
 
 <div class="bg-lightblue full-bleed py-4">
-<div class="container col-lg-9">
+<div class="container">
   <h3 class="text-center" id="underlying">Underlying health conditions</h3>
   <p>Existing health problems can increase the severity of COVID-19. Examples include heart conditions, obesity, kidney disease, and diabetes, all of which are more common in communities of color.</p>
   <p>A history of Adverse Childhood Experiences (ACEs) increases risk for chronic health conditions including heart disease, obesity, kidney disease, and diabetes and may increase the risk for severe COVID-19 illness.</p>
