--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;March 18, 2021 at 8:36 AM</p>
+            <p class="small-text">Last updated&nbsp;March 18, 2021 at 9:17 AM</p>
           
         </div>
       </div>
@@ -234,11 +234,11 @@
 
 
 
-<p>Forty percent (40%) of COVID-19 cases and deaths occur in California’s lowest Healthy Places Index (HPI) quartile. To end the pandemic, we’re setting aside forty percent (40%) of vaccines to distribute to in HPI quartile 1. This approach will help lower the rate of community infection, hospitalization, and death, as well as reduce potential new variants that might emerge. You can track vaccinations across HPI quartiles on our <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard">vaccine dashboard</a> and learn more about the HPI, developed by the Public Health Alliance of Southern California, at <a href="https://healthyplacesindex.org/">Healthyplacesindex.org</a>.&nbsp;</p>
+<p>Forty percent (40%) of COVID-19 cases and deaths occur in California’s lowest Healthy Places Index (HPI) quartile. The <a href="https://healthyplacesindex.org/">Healthy Places Index</a>, developed by the Public Health Alliance of Southern California, helps us visualize community conditions such as low income, education completeness, and health care access. To end the pandemic, we’re setting aside forty percent (40%) of vaccines to distribute to people in HPI quartile 1. This approach will help lower the rate of community infection, hospitalization, and death. It will also help reduce potential new variants that might emerge. You can track the progress of vaccines administered to HPI quartiles on our <a href="https://covid19.ca.gov/vaccines/#California-vaccines-dashboard">vaccine dashboard</a>.</p>
 
 
 
-<p>We’ve met our goal of administering  2 million vaccine doses to the hardest-hit communities statewide (Vaccine Equity Metric), representing about twenty-five 25% of eligible Californians. The Blueprint for a Safer Economy tiers were updated to allow for somewhat higher case rates in the Substantial (red) tier. Learn more about these changes in CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">Blueprint for a Safer Economy framework</a>.</p>
+<p>We’ve met our goal of administering 2 million vaccine doses to the hardest-hit communities statewide. Because of this, the Blueprint for a Safer Economy tiers allow for somewhat higher case rates in the Substantial (red) tier. Learn more about these changes in CDPH’s Blueprint for a Safer Economy framework.</p>
 
 
 
