--- a/es/state-dashboard/index.html
+++ b/es/state-dashboard/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Rastreo de la COVID-19 en California</h1>
           
-            <p class="small-text">Última actualización&nbsp;17 de marzo de 2021 a las 10:00 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;18 de marzo de 2021 a las 10:00 a. m.</p>
           
         </div>
       </div>
@@ -165,8 +165,8 @@
   <div class="container py-2">
     <div class="row pb-4">
       <div class="col-lg-10 mx-auto">
-        <h2 class="text-center color-purple">Actualizado para el 17 de marzo de 2021</h2>
-        <p>Al 17 de marzo de 2021, California tiene 3,532,496 casos confirmados de COVID-19, que han dado como resultado 55,577 muertes.</p>
+        <h2 class="text-center color-purple">Actualizado para el 18 de marzo de 2021</h2>
+        <p>Al 18 de marzo de 2021, California tiene 3,535,534 casos confirmados de COVID-19, que han dado como resultado 55,795 muertes.</p>
       </div>
     </div>
 
@@ -175,23 +175,23 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Casos</div>
 
-          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,532,496</strong> <span class="text-300">en total</span>           </div>
-          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>2,441</strong> <span class="text-300">hoy</span>           </div>
+          <div id="total-cases-number" class="text-white font-size-1-2em my-2">             <strong>3,535,534</strong> <span class="text-300">en total</span>           </div>
+          <div id="total-cases-today" class="text-white font-size-1-2em mt-2">             <strong>3,038</strong> <span class="text-300">hoy</span>           </div>
           <div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
  s1.13-0.5,1.13-1.13V7.38c0-0.02,0-0.04,0-0.06C28.11,7.3,28.11,7.28,28.11,7.27z"></path>               </svg>                <!--negative arrow-->               <svg class="" version="1.1" id="arrow-down3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,21.4c0,0.62-0.5,1.13-1.13,1.13h-7.64c-0.62,0-1.13-0.5-1.13-1.13s0.5-1.13,1.13-1.13h5.05l-8.16-8.25
  l-4.89,4.89c-0.44,0.44-1.15,0.44-1.59,0L0.9,8.07c-0.44-0.44-0.44-1.15,0-1.59c0.22-0.22,0.51-0.33,0.8-0.33s0.58,0.11,0.8,0.33
  l8.05,8.05l4.89-4.89c0.21-0.21,0.5-0.33,0.8-0.33c0,0,0,0,0,0c0.3,0,0.59,0.12,0.8,0.33l8.82,8.91v-4.68c0-0.62,0.5-1.13,1.13-1.13
- s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 6 <span class="text-300">casos nuevos por cada 100 mil</span>            </div>
+ s1.13,0.5,1.13,1.13v7.42c0,0.02,0,0.04,0,0.06C28.11,21.36,28.11,21.38,28.11,21.4z"></path>               </svg>             </span> 5.9 <span class="text-300">casos nuevos por cada 100 mil</span>            </div>
         </div>
       </div>
       <div class="col-md-3 px-10px">
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Muertes</div>
 
-          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>55,577</strong> <span class="text-300">en total</span>           </div>
-          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>205</strong> <span class="text-300">hoy</span>           </div>
+          <div id="total-deaths-number" class="text-white font-size-1-2em my-2">             <strong>55,795</strong> <span class="text-300">en total</span>           </div>
+          <div id="total-deaths-today" class="text-white font-size-1-2em mt-2">             <strong>218</strong> <span class="text-300">hoy</span>           </div>
           <div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -205,8 +205,8 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Pruebas</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,460,324</strong> <span class="text-300">en total</span>           </div>
-          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>88,299</strong> <span class="text-300">hoy</span>           </div>
+          <div id="total-tested-number" class="text-white font-size-1-2em my-2"><strong>51,601,716</strong> <span class="text-300">en total</span>           </div>
+          <div id="total-tested-today" class="text-white font-size-1-2em mt-2">             <strong>109,227</strong> <span class="text-300">hoy</span>           </div>
           <div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">              <span class="chart-arrow" arria-hidden="true">               <svg class="d-none" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">                 <path class="chart-arrow-path" d="M28.11,7.27c0-0.62-0.5-1.13-1.13-1.13h-7.64c-0.62,0-1.13,0.5-1.13,1.13s0.5,1.13,1.13,1.13h5.05l-8.16,8.25
  l-4.89-4.89c-0.44-0.44-1.15-0.44-1.59,0L0.9,20.6c-0.44,0.44-0.44,1.15,0,1.59c0.22,0.22,0.51,0.33,0.8,0.33s0.58-0.11,0.8-0.33
  l8.05-8.05l4.89,4.89c0.21,0.21,0.5,0.33,0.8,0.33c0,0,0,0,0,0c0.3,0,0.59-0.12,0.8-0.33l8.82-8.91v4.68c0,0.62,0.5,1.13,1.13,1.13
@@ -220,14 +220,14 @@
         <div class="bg-purple bd-rounded-10 px-6px py-2 text-center mt-3 summary-box">
           <div class="h5 text-uppercase color-orange line-height-1-2 mt-1">Vacunas administradas</div>
 
-          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>13,037,557</strong> <span class="text-300">en total</span>           </div>           
+          <div id="total-tested-number" class="text-white font-size-1-2em my-4"><strong>13,382,046</strong> <span class="text-300">en total</span>           </div>           
         </div>
       </div>
     </div>
 
     <div class="row pb-4 py-5">
       <div class="col-lg-10 mx-auto">
-        <p class="small-text">Actualizado el 17 de marzo de 2021, con datos del 16 de marzo de 2021.</p>
+        <p class="small-text">Actualizado el 18 de marzo de 2021, con datos del 17 de marzo de 2021.</p>
 
         <p class="small-text">Nota: La tasa de casos se basa en un promedio de 7 días con un retraso de 7 días. Las tasas de muertes se basan en un promedio de 7 días con un retraso de 21 días debido a demoras en el reporte. La positividad de las pruebas se basa en un promedio de 7 días sin retraso. El cambio direccional se compara con el periodo anterior de 7 días. Datos proporcionados por el Departamento de Salud Pública de California.</p>
       </div>
@@ -273,7 +273,7 @@
 
 
 
-<p>California tiene 3,532,496 casos confirmados de COVID-19, que han dado como resultado 55,577 muertes.</p>
+<p>California tiene 3,535,534 casos confirmados de COVID-19, que han dado como resultado 55,795 muertes.</p>
 
 
 
@@ -308,7 +308,7 @@
 
 
 
-<p>El número de resultados de las pruebas de diagnóstico de COVID-19 en California alcanzó un total de 51,460,324, un aumento de 88,299 pruebas con respecto al total del día anterior. La tasa de pruebas positivas en los últimos 7 días es del 2 %.</p>
+<p>El número de resultados de las pruebas de diagnóstico de COVID-19 en California alcanzó un total de 51,601,716, un aumento de 109,227 pruebas con respecto al total del día anterior. La tasa de pruebas positivas en los últimos 7 días es del 2 %.</p>
 
 
 
@@ -343,7 +343,7 @@
 
 
 
-<p>El número de hospitalizaciones debido a casos confirmados y sospechosos de COVID-19 en California alcanzó un total de 3,462, an increase of 6 desde el total del día anterior. El número de pacientes de ICU debido a casos confirmados y sospechosos de COVID-19 en California alcanzó un total de 856, a decrease of 41 desde el total del día anterior.</p>
+<p>El número de hospitalizaciones debido a casos confirmados y sospechosos de COVID-19 en California alcanzó un total de 3,456, a decrease of 6 desde el total del día anterior. El número de pacientes de ICU debido a casos confirmados y sospechosos de COVID-19 en California alcanzó un total de 850, a decrease of 6 desde el total del día anterior.</p>
 
 
 
