--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -499,7 +499,9 @@ addtositemap: true
 
 
 <div class="bg-lightblue full-bleed py-4">
-<div class="container col-lg-9">
+<div class="container">
+<div class="row">
+<div class="container col-lg-10">
   <h3 class="text-center" id="underlying">Underlying health conditions</h3>
   <p>Existing health problems can increase the severity of COVID-19. Examples include heart conditions, obesity, kidney disease, and diabetes, all of which are more common in communities of color.</p>
   <p>A history of Adverse Childhood Experiences (ACEs) increases risk for chronic health conditions including heart disease, obesity, kidney disease, and diabetes and may increase the risk for severe COVID-19 illness.</p>
@@ -509,6 +511,8 @@ addtositemap: true
     <li><a href="#learn-more">Exposure to prolonged ACEs</a>, when experienced without protective buffering factors, can lead to changes to the biological stress response which can affect immune functioning (the toxic stress response).</li>
     <li>Individuals with a history of ACEs may also be more sensitive to the effects of new stressors, such as those presented by the COVID-19 pandemic. <a href="#learn-more">See how to manage stress for health</a>.</li>
   </ul>
+</div>
+</div>
 </div>
 </div>
 
