Update page - education.html 6e9d02e16e57137abeb75edd068275636a5afa9d

--- a/education/index.html
+++ b/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Education</h1>
           
-            <p class="small-text">Last updated&nbsp;March 16, 2021 at 5:18 PM</p>
+            <p class="small-text">Last updated&nbsp;March 18, 2021 at 1:46 PM</p>
           
         </div>
       </div>
@@ -173,7 +173,7 @@
 
 
 
-<p>Educators and childcare providers under age 65 will be able to book an appointment on <a href="https://myturn.ca.gov/">myturn.ca.gov</a> with a special code. The State of California is working with local education and childcare organizations to distribute these codes. Learn more about the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">K-12 school staff allocation plan</a> and the <a href="https://files.covid19.ca.gov/pdf/vaccine-allocation-childcare-workers.pdf" data-type="URL" data-id="https://files.covid19.ca.gov/pdf/vaccine-allocation-childcare-workers.pdf">allocation plan for childcare workers</a>.</p>
+<p>Educators and childcare providers under age 65 will be able to&nbsp;book an appointment on <a href="https://myturn.ca.gov/">myturn.ca.gov</a> with a special code. The State of California is working with local education and childcare organizations to distribute these codes. Learn more about the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf" data-type="URL" data-id="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">K-12 school staff allocation plan</a> and the <a href="https://files.covid19.ca.gov/pdf/vaccine-allocation-childcare-workers.pdf" data-type="URL" data-id="https://files.covid19.ca.gov/pdf/vaccine-allocation-childcare-workers.pdf">allocation plan for childcare workers</a>.</p>
 
 
 
@@ -288,12 +288,15 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Can my school reopen under the Blueprint for a Safer Economy? </h4>
+            <h4>Can my school reopen under the Blueprint for a Safer Economy?&nbsp;</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>Learn more about <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guidance for schools</a>.</p>
+            <p>All K-6 grade schools are able to open for in-person instruction if the county case rate is below 25 per 100,000 and their plan for reopening is not found deficient by county health officials or the State Safe Schools Team. All schools are able to open for in-person instruction if the county is in the red, orange or yellow tiers.&nbsp;</p>
+<p>All public schools must offer in-person instruction under the <a href="http://cert1.mail-west.com/7Jyj7W/uzjanmc7rm/k36817Jgtmy/0gk2q/qvnq7Jddykx/817J/qo3iy3h2k1i56alg?_c=d%7Cze7pzanwmhlzgt%7C1865v1x2u3lv3bd&amp;_ce=1614969307.2f0bcbf94cf0f1ef3b6c085fb9534889">COVID-19 relief and school reopening relief package</a> for K-2 grades and students with high needs by March 31, 2021. Schools that do not offer in-person instruction for these groups by that date will lose 1 percent of eligible funds every day thereafter.&nbsp;</p>
+<p>Schools in the Substantial (red) tier or better are required to offer in-person instruction to all students in all elementary grades and at least one middle or high school grade, or risk the same funding penalty.</p>
+<p>Learn more about <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guidance for schools</a>.</p>
 
                   </div>
                 </div>
@@ -303,15 +306,15 @@
 
 
 
-<p>All K-6 grade schools are able to open for in-person instruction if the county case rate is below 25 per 100,000 and their plan for reopening is not found deficient by county health officials or the State Safe Schools Team. All schools are able to open for in-person instruction if the county is in the red, orange or yellow tiers.&nbsp;</p>
 
 
 
-<p>All public schools must offer in-person instruction under the <a href="http://cert1.mail-west.com/7Jyj7W/uzjanmc7rm/k36817Jgtmy/0gk2q/qvnq7Jddykx/817J/qo3iy3h2k1i56alg?_c=d%7Cze7pzanwmhlzgt%7C1865v1x2u3lv3bd&amp;_ce=1614969307.2f0bcbf94cf0f1ef3b6c085fb9534889">COVID-19 relief and school reopening relief package</a> for K-2 grades and students with high needs by March 31, 2021. Schools that do not offer in-person instruction for these groups by that date will lose 1 percent of eligible funds every day thereafter.&nbsp;</p>
 
 
 
-<p>Schools in the Substantial (red) tier or better are required to offer in-person instruction to all students in all elementary grades and at least one middle or high school grade, or risk the same funding penalty.</p>
+
+
+
 
 
 
