--- a/get-tested/index.html
+++ b/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Testing</h1>
           
-            <p class="small-text">Last updated&nbsp;March 18, 2021 at 1:07 PM</p>
+            <p class="small-text">Last updated&nbsp;March 18, 2021 at 2:01 PM</p>
           
         </div>
       </div>
@@ -170,11 +170,11 @@
 
 
 
-<p>On this page you will find:</p>
+<p class="h3">On this page:</p>
 
 
 
-<ul><li><a href="https://covid19.ca.gov/get-tested/#types-of-tests"><strong>Types of tests</strong></a></li><li><a href="https://covid19.ca.gov/get-tested/#cost-for-testing"><strong>Cost for testing</strong></a></li><li><a href="https://covid19.ca.gov/get-tested/#who-can-get-tested"><strong>Who can get tested</strong></a></li><li><a href="https://covid19.ca.gov/get-tested/#how-to-get-tested"><strong>How to get tested</strong></a></li><li><a href="https://covid19.ca.gov/get-tested/#questions-and-answers"><strong>Questions and answers</strong></a></li></ul>
+<ul class="toc"><li><a href="https://covid19.ca.gov/get-tested/#types-of-tests"><strong>Types of tests</strong></a></li><li><a href="https://covid19.ca.gov/get-tested/#cost-for-testing"><strong>Cost for testing</strong></a></li><li><a href="https://covid19.ca.gov/get-tested/#who-can-get-tested"><strong>Who can get tested</strong></a></li><li><a href="https://covid19.ca.gov/get-tested/#how-to-get-tested"><strong>How to get tested</strong></a></li><li><a href="https://covid19.ca.gov/get-tested/#questions-and-answers"><strong>Questions and answers</strong></a></li></ul>
 
 
 
