--- a/get-tested/index.html
+++ b/get-tested/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Testing</h1>
           
-            <p class="small-text">Last updated&nbsp;March 18, 2021 at 2:01 PM</p>
+            <p class="small-text">Last updated&nbsp;March 18, 2021 at 2:12 PM</p>
           
         </div>
       </div>
@@ -238,7 +238,7 @@
 
 
 
-<h3 class="mt-4">Testing with OptumServe</h3>
+<h3 id="Testing-with-OptumServe">Testing with OptumServe</h3>
 
 
 
@@ -395,7 +395,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Who should get tested for coronavirus?</h4>
+            <h4 id="Who-should-get-tested-for-coronavirus">Who should get tested for coronavirus?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
