Update page - vaccines.html 714eb0e6697e1747bfab39eae201522ebd8fa319

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 18, 2021 at 12:59 PM</p>
+            <p class="small-text">Last updated&nbsp;March 18, 2021 at 3:22 PM</p>
           
         </div>
       </div>
@@ -649,7 +649,7 @@
 
 
 
-<h2 id="California-vaccines-dashboard"><strong>Vaccination progress dashboards</strong></h2>
+<h2 id="California-vaccines-dashboard">Vaccination progress dashboards</h2>
 
 
 
