Update page - safer-economy.html d8742924ca7b892eb4ccae3ad34cc8d71b128698

--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;March 18, 2021 at 7:39 PM</p>
+            <p class="small-text">Last updated&nbsp;March 18, 2021 at 10:53 PM</p>
           
         </div>
       </div>
@@ -190,7 +190,7 @@
 
 
 
-<p><strong>California&#8217;s county risk levels</strong></p>
+<p id="county-status"><strong>California&#8217;s county risk levels</strong></p>
 
 
 
