--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;10:53 م الساعة 18 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;5:40 ص الساعة 19 مارس 2021</p>
           
         </div>
       </div>
