Update page - vaccines.html ef0d50cdcf07c9b7bc98e81bce73902585893244

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 19, 2021 at 6:44 AM</p>
+            <p class="small-text">Last updated&nbsp;March 19, 2021 at 6:56 AM</p>
           
         </div>
       </div>
@@ -438,7 +438,7 @@
 
 
 
-<div style="display:none;" class="js-qa js-qa-question">How can I get a COVID-19 vaccine appointment or vaccine location?</div>
+<div style="display:none;" class="js-qa js-qa-question">How can I get a COVID-19 vaccine appointment or vaccination locations?</div>
 
 
 
@@ -446,19 +446,19 @@
 
 
 
-<h3>Verify your eligibility or schedule with My Turn</h3>
+<h3 class="js-qa js-qa-answer">Verify your eligibility or schedule with My Turn</h3>
 
 
 
-<p>Every Californian can sign up at <a href="https://myturn.ca.gov">myturn.ca.gov</a> or call (833) 422-4255 to see if it&#8217;s their turn to get the COVID-19 vaccine.&nbsp;</p>
+<p class="js-qa js-qa-answer">Every Californian can sign up at <a href="https://myturn.ca.gov">myturn.ca.gov</a> or call (833) 422-4255 to see if it&#8217;s their turn to get the COVID-19 vaccine.&nbsp;</p>
 
 
 
-<p>People with a high chance of exposure, high-risk, and those 65 or older are eligible for vaccination and can schedule appointments now. If you’re eligible, and live or work in certain counties, you can schedule an appointment through My Turn. Appointments are available in Spanish.</p>
+<p class="js-qa js-qa-answer">People with a high chance of exposure, high-risk, and those 65 or older are eligible for vaccination and can schedule appointments now. If you’re eligible, and live or work in certain counties, you can schedule an appointment through My Turn. Appointments are available in Spanish.</p>
 
 
 
-<p>If it’s not your turn yet or appointments are not available, you can <strong>register to be notified</strong> when you’re eligible or when appointments open up.</p>
+<p class="js-qa js-qa-answer">If it’s not your turn yet or appointments are not available, you can <strong>register to be notified</strong> when you’re eligible or when appointments open up.</p>
 
 
 
@@ -486,7 +486,7 @@
 
 
 
-<h3 id="Schedule-with-a-local-provider">Schedule with a local provider</h3>
+<h3 class="js-qa js-qa-answer" id="Schedule-with-a-local-provider">Schedule with a local provider</h3>
 
 
 
@@ -494,7 +494,7 @@
 
 
 
-<p>You can use the CDC VaccineFinder tool to find vaccination locations near you:</p>
+<p class="js-qa js-qa-answer">You can use the CDC VaccineFinder tool to find vaccination locations near you:</p>
 
 
 
