Update page - data-and-tools.html 4bf066f9c475eb580e8de6b56e60bb4666a83dd5

--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;March 19, 2021 at 6:58 AM</p>
+            <p class="small-text">Last updated&nbsp;March 19, 2021 at 7:36 AM</p>
           
         </div>
       </div>
@@ -281,7 +281,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-VACCINE-DATA">COVID-19 VACCINE DATA</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-VACCINE-DATA">COVID-19 VACCINE DATA</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -309,7 +309,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="COVID-19-CASES-DATA">COVID-19 CASES DATA</h4>
+            <h4 class=" js-qa-exclude" id="COVID-19-CASES-DATA">COVID-19 CASES DATA</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -337,7 +337,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOSPITALS-DATA">HOSPITALS DATA</h4>
+            <h4 class=" js-qa-exclude" id="HOSPITALS-DATA">HOSPITALS DATA</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -365,7 +365,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="LOGISTICS-DATA">LOGISTICS DATA</h4>
+            <h4 class=" js-qa-exclude" id="LOGISTICS-DATA">LOGISTICS DATA</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -421,7 +421,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">CASE DEMOGRAPHICS RACE AND ETHNICITY</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-RACE-AND-ETHNICITY">CASE DEMOGRAPHICS RACE AND ETHNICITY</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -444,7 +444,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-SEX">CASE DEMOGRAPHICS SEX</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-SEX">CASE DEMOGRAPHICS SEX</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -467,7 +467,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="CASE-DEMOGRAPHICS-AGE">CASE DEMOGRAPHICS AGE</h4>
+            <h4 class=" js-qa-exclude" id="CASE-DEMOGRAPHICS-AGE">CASE DEMOGRAPHICS AGE</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -490,7 +490,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="HOMELESS-IMPACT">HOMELESS IMPACT</h4>
+            <h4 class=" js-qa-exclude" id="HOMELESS-IMPACT">HOMELESS IMPACT</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -513,7 +513,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="BED-SURGE">BED SURGE</h4>
+            <h4 class=" js-qa-exclude" id="BED-SURGE">BED SURGE</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
