Update translation - 104771983 (#3797) d797510f2accb75e642bd3f36bbdc8a119743dfa

--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제를 위한 청사진</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 19일 오전 9:47</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 19일 오전 9:52</p>
           
         </div>
       </div>
@@ -225,11 +225,11 @@
 
 
 
-<p>COVID-19 사례 및 사망자의 사십 퍼센트(40%)가 캘리포니아의 최저 건강한 장소 지수(Healthy Places Index, HPI) 사분위에서 발생합니다. 판데믹 종식을 위해 백신 물량의 사십 퍼센트(40%)를 별도로 배정하여 HPI 1 사분위에 배분하고 있습니다. 이 방법을 통해 지역 사회 감염, 입원 및 사망을 낮출 뿐만 아니라 향후 출현할 가능성이 있는 새로운 변이 바이러스를 줄여 나갈 수 있게 됩니다. 전체 HPI 사분위에 대한 백신 접종은 <a href="/ko/vaccines/#California-vaccines-dashboard">백신 관련 대시보드</a>에서 추적할 수 있으며 남가주 공중 보건  연합회(Public Health Alliance of Southern California)가 개발한 HPI에 관한 세부 사항은 <a href="https://healthyplacesindex.org/">Healthyplacesindex.org</a>에서 확인할 수 있습니다. </p>
+<p>COVID-19 사례 및 사망자의 사십 퍼센트(40%)가 캘리포니아의 최저 건강한 장소 지수(Healthy Places Index, HPI) 사분위에서 발생합니다. 남가주 공중보건 연합회(Public Health Alliance of Southern California)가 개발한 <a href="https://healthyplacesindex.org/">건강한 장소 지수</a>를 통해 저소득 및 학력, 의료 접근성 등의 지역 사회 여건을 눈으로 확인할 수 있습니다. 판데믹 종식을 위해 백신 물량의 사십 퍼센트(40%)를 별도로 배정하여 HPI 1 사분위에 배분하고 있습니다. 이 방법을 통해 지역 사회 감염, 입원 및 사망을 낮출 수 있게 됩니다. 뿐만 아니라 출현할 가능성이 있는 새로운 변이 바이러스를 줄여 나갈 수 있습니다. HPI 사분위 별로 투여한 백신 진행 상황은 <a href="/ko/vaccines/#California-vaccines-dashboard">백신 대시보드</a>에서 추적할 수 있습니다.</p>
 
 
 
-<p>가장 큰 피해를 입은 지역 사회에 주 전역에서  2백만 회분의 백신을 투여(백신 형평성 메트릭)한다는 목표를 달성하였으며 이는 해당 접종 자격이 있는 캘리포니아 주민의 약 이십오 퍼센트(25%)에 해당합니다. 더욱 안전한 경제를 위한 청사진 단계를 업데이트하여 상당(적색) 단계에서 어느 정도 높은 사례 발생율을 허용하였습니다. 해당 변경 사항에 관한 세부 내용은 CDPH의 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">더욱 안전한 경제를 위한 청사진 체계</a>에서 확인하십시오.</p>
+<p>가장 큰 피해를 입은 지역 사회에 주 전체로 2백만 회분의 백신을 투여하는 목표를 달성하였습니다. 이에 더욱 안전한 경제를 위한 청사진을 통해 상당(적색) 단계에서 어느 정도 더 높은 사례 발생율을 허용하였습니다. 해당 변경 사항에 관한 세부 내용은 CDPH의 더욱 안전한 경제를 위한 청사진 체계에서 확인하십시오.</p>
 
 
 
