--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 19, 2021 sa 9:47 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 19, 2021 sa 9:52 AM</p>
           
         </div>
       </div>
@@ -225,11 +225,11 @@
 
 
 
-<p>Nangyayari ang apatnapung porsyento (40%) ng mga kaso at pagkamatay dahil sa COVID-19 sa pinakamababang quartile ng Index ng Mga Lugar na Malayo sa Sakit (HPI) ng California. Para mawakasan ang pandemya, magtatabi kami ng apatnapung porsyento (40%) ng mga bakuna na ipapamahagi sa quartile 1 ng HPI. Makakatulong ang paraang ito na pababain ang rate ng hawahan sa komunidad, pagkakaospital, at pagkamatay, at bawasan ang mga posibleng bagong variant na puwedeng lumabas. Puwede mong i-track ang mga pagbabakuna sa mga quartile ng HPI sa aming <a href="/tl/vaccines/#California-vaccines-dashboard">dashboard ng bakuna</a> at puwede kang matuto pa tungkol sa HPI, na ginawa ng Public Health Alliance of Southern California sa <a href="https://healthyplacesindex.org/">Healthyplacesindex.org</a>. </p>
+<p>Nangyayari ang apatnapung porsyento (40%) ng mga kaso at pagkamatay dahil sa COVID-19 sa pinakamababang quartile ng Index ng Mga Lugar na Malayo sa Sakit (HPI) ng California. Ang <a href="https://healthyplacesindex.org/">Index ng Malulusog na Lugar</a>, na ginawa ng Public Health Alliance of Southern California, ay tumutulong sa akin na makita ang mga kundisyon ng komunidad gaya ng mababang kita, pagtatapos ng edukasyon, at access sa pangangalagang pangkalusugan. Para mawakasan ang pandemya, magtatabi kami ng apatnapung porsyento (40%) ng mga bakuna na ipapamahagi sa mga tao sa quartile 1 ng HPI. Makakatulong ang paraang ito na pababain ang rate ng hawahan sa komunidad, pagkakaospital, at pagkamatay. Mababawasan din nito ang mga potensyal na bagong variant na maaaring lumabas. Puwede mong subaybayan ang progreso ng mga bakung ibinibigay sa mga HPI quartile sa aming <a href="/tl/vaccines/#California-vaccines-dashboard">dashboard sa bakuna</a>.</p>
 
 
 
-<p>Nakamit na namin ang aming layuning magbigay  ng 2 milyong dosis ng bakuna sa mga pinakaapektadong komunidad sa buong estado (Sukatan ng Pagkakapantay-pantay sa Bakuna), na kumakatawan sa humigit-kumulang dalawampu't limang porsyento (25%) ng mga kwalipikadong Californian. Na-update ang mga tier ng Blueprint para sa Mas Ligtas na Ekonomiya para bigyang-daan ang mas matataas na bilang ng kaso sa tier na Marami (pula). Matuto pa tungkol sa pagbabagong ito sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">framework ng Blueprint para sa Mas Ligtas na Ekonomiya</a> ng CDPH.</p>
+<p>Nakamit na natin ang ating layunin na pagbibigay ng 2 milyong dosis ng bakuna sa mga pinakaapektadong komunidad sa buong estado. Dahil dito, ang mga tier ng Blueprint para sa Mas Ligtas na Ekonomiya ay nagbibigay-daan sa mas matataas na bilang ng kaso sa tier na Marami (pula). Matuto pa tungkol sa pagbabagong ito sa framework ng Blueprint para sa Mas Ligtas na Ekonomiya ng CDPH.</p>
 
 
 
