--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برامج تخطيطية لاقتصاد أكثر أمانا</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;9:47 ص الساعة 19 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;9:52 ص الساعة 19 مارس 2021</p>
           
         </div>
       </div>
@@ -225,11 +225,11 @@
 
 
 
-<p>تحدث أربعون بالمائة (40٪) من حالات الإصابة والوفيات بفيروس كوفيد-19 في الربع الأدنى لمؤشر الأماكن الصحية في كاليفورنيا. ولإنهاء هذا الوباء، فإننا نخصص أربعين في المائة (40%) من اللقاحات لتوزيعها على الربع 1 على مؤشر الأماكن الصحية. وسوف يساعد هذا النهج في خفض معدل الإصابة بالمجتمعات، والدخول إلى المستشفيات، والوفاة، فضلاً عن الحد من المتغيرات الجديدة المحتملة التي قد تظهر. يمكنك تتبع اللقاحات عبر أرباع مؤشر الأماكن الصحية على <a href="/ar/vaccines/#California-vaccines-dashboard">لوحة معلومات اللقاح</a> الخاصة بنا ومعرفة المزيد حول مؤشر الأماكن الصحية، التي طورها تحالف الصحة العامة بجنوب كاليفورنيا، في موقع<a href="https://healthyplacesindex.org/">Healthy Places Index.org</a>. </p>
+<p>تحدث أربعون بالمائة (40٪) من حالات الإصابة والوفيات بفيروس كوفيد-19 في الربع الأدنى لمؤشر الأماكن الصحية في كاليفورنيا. يساعدنا <a href="https://healthyplacesindex.org/">مؤشر الأماكن الصحية</a>، الذي طوره تحالف الصحة العامة بجنوب كاليفورنيا، على تصور ظروف المجتمع مثل الدخل المنخفض، وإكمال التعليم، والحصول على الرعاية الصحية. ولإنهاء هذا الوباء، فإننا نخصص أربعين في المائة (40%) من اللقاحات لتوزيعها على الأفراد الموجودين بالربع 1 على مؤشر الأماكن الصحية. وسوف يساعد هذا النهج في خفض معدل الإصابة بالمجتمعات، والدخول إلى المستشفيات، والوفاة. كما سيساعد على الحد من المتغيرات الجديدة المحتملة التي قد تظهر. يمكنك تتبع تقدم اللقاحات التي تُوزع على أرباع مؤشر الأماكن الصحية على <a href="/ar/vaccines/#California-vaccines-dashboard">لوحة معلومات اللقاح</a>الخاصة بنا.</p>
 
 
 
-<p>ولقد لقد حققنا هدفنا المتمثل في توزيع  2 مليون جرعة لقاح على المجتمعات الأكثر تضررًا على مستوى الولاية (مقياس العدالة في توزيع اللقاح)، والتي تمثل حوالي خمسة وعشرين بالمائة 25% من سكان كاليفورنيا المؤهلين. ولقد تم تحديث فئات مخطط الاقتصاد الأكثر أمانًا لتسمح بأن تكون معدلات الإصابات المرتفعة إلى حد ما في الفئة الكبيرة (أحمر). تعرف على المزيد حول هذه التغييرات في <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">إطار البرنامج التخطيطي لاقتصاد أكثر أمانًا</a> الصادر عن إدارة الصحة العامة بولاية كاليفورنيا.</p>
+<p>لقد حققنا هدفنا المتمثل في توزيع مليوني جرعة لقاح على المجتمعات الأكثر تضررًا على مستوى الولاية. وبسبب هذا فإن فئات مخطط الاقتصاد الأكثر أمانًا تسمح بأن تكون معدلات الإصابات المرتفعة إلى حد ما في الفئة الكبيرة (أحمر). تعرف على المزيد حول هذه التغييرات في إطار البرنامج التخطيطي لاقتصاد أكثر أمانًا الصادر عن إدارة الصحة العامة بولاية كاليفورنيا.</p>
 
 
 
