--- a/es/safer-economy/index.html
+++ b/es/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Plan para una economía más segura</h1>
           
-            <p class="small-text">Última actualización&nbsp;19 de marzo de 2021 a las 9:47 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;19 de marzo de 2021 a las 9:52 a. m.</p>
           
         </div>
       </div>
@@ -225,11 +225,11 @@
 
 
 
-<p>El cuarenta por ciento (40 %) de los casos y las muertes por COVID-19 ocurren en el cuartil más bajo del índice de lugares saludables (HPI) de California. Para poner fin a la pandemia, estamos reservando el cuarenta por ciento (40 %) de las vacunas para distribuirlas en el cuartil 1 del HPI. Este enfoque ayudará a reducir la tasa de infección, hospitalización y muerte en las comunidades, así como a reducir las posibles nuevas variantes que podrían surgir. Puede realizar un seguimiento de las vacunas en los cuartiles del HPI en nuestro <a href="/es/vaccines/#California-vaccines-dashboard">panel de control de vacunas</a> y obtener más información sobre el HPI, elaborado por la Alianza de Salud Pública del Sur de California, en <a href="https://healthyplacesindex.org/">Healthyplacesindex.org</a>. </p>
+<p>El cuarenta por ciento (40 %) de los casos y las muertes por COVID-19 ocurren en el cuartil más bajo del índice de lugares saludables (HPI) de California. El <a href="https://healthyplacesindex.org/">índice de lugares saludables</a>, creado por la Alianza de Salud Pública del Sur de California, nos ayuda a visualizar las condiciones de las comunidades, como bajos ingresos, nivel de educación y acceso a atención médica. Para poner fin a la pandemia, estamos reservando el cuarenta por ciento (40 %) de las vacunas para distribuirlas a personas del cuartil 1 del HPI. Este enfoque ayudará a reducir la tasa de infección, hospitalización y muerte en las comunidades También ayudará a reducir las posibles nuevas variantes que puedan surgir. Puede realizar un seguimiento del progreso de las vacunas administradas a los cuartiles del HPI en nuestro <a href="/es/vaccines/#California-vaccines-dashboard">panel de control de vacunas</a>.</p>
 
 
 
-<p>Ya alcanzamos nuestra meta de administrar dos millones de dosis de vacunas a las comunidades más afectadas de todo el estado (Indicador de equidad de la vacuna), lo que representa alrededor del 25 % de los californianos elegibles. Se actualizaron los niveles del Plan para una economía más segura para permitir tasas de casos un poco más altas en el nivel Sustancial (rojo). Obtenga más información sobre estos cambios en el <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID19CountyMonitoringOverview.aspx">marco del Plan para una economía más segura</a> del CDPH.</p>
+<p>Ya cumplimos nuestro objetivo de administrar dos millones de dosis de vacunas a las comunidades más afectadas en todo el estado. Debido a esto, los niveles del Plan para una economía más segura permiten tasas de casos un poco más altas en el nivel Sustancial (rojo). Obtenga más información sobre estos cambios en el marco del Plan para una economía más segura del CDPH.</p>
 
 
 
