Update page - vaccines.html c37ac1ddfabdbef5cfe57c6f5e4a06be575fa265

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 19, 2021 at 10:13 AM</p>
+            <p class="small-text">Last updated&nbsp;March 19, 2021 at 11:41 AM</p>
           
         </div>
       </div>
@@ -1670,7 +1670,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>No, there is no mandatory vaccination requirement from either the state or federal government.&nbsp; Once more and more Californians see how safe and effective the COVID-19 vaccines are, we hope they will voluntarily opt to receive them.</p>
+            <p>No, there is no mandatory vaccination requirement from either the state or federal government.  Once more and more Californians see how safe and effective the COVID-19 vaccines are, we hope they will voluntarily opt to receive them.</p>
 
                   </div>
                 </div>
