--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;March 19, 2021 at 11:44 AM</p>
+            <p class="small-text">Last updated&nbsp;March 19, 2021 at 12:08 PM</p>
           
         </div>
       </div>
