Update translation - 104804792 (#3814) 48d45e1fece91ea66659519a9a71dc1610ef2e7c

--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年3月22日, 上午2:11</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月22日, 上午2:17</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<p><strong>加州各县风险等级</strong></p>
+<p id="county-status"><strong>加州各县风险等级</strong></p>
 
 
 
@@ -225,7 +225,7 @@
 
 
 
-<p>40％的COVID-19感染及死亡发生在加州处于健康地方指数(HPI)最低四分位数的社区。由南加州公共卫生联盟 (Public Health Alliance) 研发的<a href="https://healthyplacesindex.org/">健康地方指数</a>，能帮助我们将低收入、教育程度及医疗保健普及率等社区状况视觉化。为结束疫情，我们将预留百分之四十 (40%) 的疫苗，以分配给HPI第1个四分位数社区的居民。此方法将有助于降低社区感染率、住院率及死亡率。其也将有助于降低新变种病毒出现的几率。您可以通过<a href="/zh-hans/vaccines/#California-vaccines-dashboard">疫苗一览表</a>追踪HPI四分位数社区的疫苗接种进程。</p>
+<p>40％的COVID-19感染及死亡发生在加州处于健康地方指数(HPI)最低四分位数的社区。由南加州公共卫生联盟 (Public Health Alliance) 研发的<a href="https://healthyplacesindex.org/">健康地方指数</a>能帮助我们视觉化社区状况，其中涉及低收入、教育程度，以及获得医疗保健服务的机会。为结束疫情，我们将预留40％的疫苗，以分配给HPI第1个四分位数社区的居民。此方法将有助于降低社区感染率，住院率，以及死亡率。其也将有助于降低新变种出现的几率。您可以通过<a href="/zh-hans/vaccines/#California-vaccines-dashboard">疫苗一览表</a>追踪HPI四分位数社区的疫苗接种进程。</p>
 
 
 
