--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月22日, 上午2:11</p>
+            <p class="small-text">最近更新&nbsp;2021年3月22日, 上午2:17</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<p><strong>加州各縣風險等級</strong></p>
+<p id="county-status"><strong>加州各縣風險等級</strong></p>
 
 
 
@@ -225,7 +225,7 @@
 
 
 
-<p>百分之四十 (40%) 的新型冠狀病毒感染及死亡發生在加州處於健康地方指數(HPI)最低四分位數的社區。由南加州公共衛生聯盟 (Public Health Alliance) 研發的<a href="https://healthyplacesindex.org/">健康地方指數</a>，能幫助我們將低收入、教育程度及醫療保健普及率等社區狀況視覺化。為結束疫情，我們將預留百分之四十 (40%) 的疫苗，以分配給HPI第1個四分位數社區的居民。此方法將有助於降低社區感染率、住院率及死亡率。其也將有助於降低新變種病毒出現的機率。您可以透過<a href="/zh-hant/vaccines/#California-vaccines-dashboard">疫苗一覽表</a>追踪HPI四分位數社區的疫苗接種進程。</p>
+<p>40％的新型冠狀病毒感染及死亡發生在加州處於健康地方指數(HPI)最低四分位數的社區。由南加州公共衛生聯盟 (Public Health Alliance) 研發的<a href="https://healthyplacesindex.org/">健康地方指數</a>能幫助我們視覺化社區狀況，其中涉及低收入、教育程度，以及獲得醫療保健服務的機會。為結束疫情，我們將預留40％的疫苗，以分配給HPI第1個四分位數社區的居民。此方法將有助於降低社區感染率、住院率以及死亡率。其也將有助於降低新變種出現的機率。您可以透過<a href="/zh-hant/vaccines/#California-vaccines-dashboard">疫苗一覽表</a>追踪HPI四分位數社區的疫苗接種進程。</p>
 
 
 
