--- a/es/safer-economy/index.html
+++ b/es/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Plan para una economía más segura</h1>
           
-            <p class="small-text">Última actualización&nbsp;22 de marzo de 2021 a las 2:11 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;22 de marzo de 2021 a las 2:17 a. m.</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<p><strong>Niveles de riesgo de los condados de California</strong></p>
+<p id="county-status"><strong>Niveles de riesgo de los condados de California</strong></p>
 
 
 
