--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제를 위한 청사진</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 22일 오전 2:11</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 22일 오전 2:17</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<p><strong>캘리포니아의 카운티 위험 수준</strong></p>
+<p id="county-status"><strong>캘리포니아의 카운티 위험 수준</strong></p>
 
 
 
