--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 22, 2021 sa 2:11 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 22, 2021 sa 2:17 AM</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<p><strong>Mga antas ng panganib sa county ng California</strong></p>
+<p id="county-status"><strong>Mga antas ng panganib sa county ng California</strong></p>
 
 
 
