--- a/vi/safer-economy/index.html
+++ b/vi/safer-economy/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 2:11</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 3, 2021 lúc 2:17</p>
           
         </div>
       </div>
@@ -187,7 +187,7 @@
 
 
 
-<p><strong>Mức độ rủi ro cấp quận của California</strong></p>
+<p id="county-status"><strong>Mức độ rủi ro cấp quận của California</strong></p>
 
 
 
@@ -227,7 +227,7 @@
 
 
 
-<p>Bốn mươi phần trăm (40%) ca nhiễm và tử vong do COVID-19 tại California thuộc góc phần tư thấp nhất của Chỉ Số Địa Điểm Khỏe Mạnh (HPI). Do Liên Minh Y Tế Công Cộng Nam California phát triển, <a href="https://healthyplacesindex.org/">Chỉ Số Địa Điểm Khỏe Mạnh</a> giúp chúng ta hình dung được các điều kiện của cộng đồng như thu nhập thấp, trình độ học vấn và khả năng tiếp cận dịch vụ chăm sóc sức khỏe. Để chấm dứt đại dịch, chúng tôi dành ra bốn mươi phần trăm (40%) vắc-xin để phân phối cho những người thuộc góc phần tư HPI 1. Phương pháp này sẽ giúp giảm tỷ lệ mắc bệnh, nhập viện và tử vong trong cộng đồng. Cách này cũng sẽ giúp giảm bớt các biến thể mới có thể xuất hiện. Quý vị có thể theo dõi tiến trình của các loại vắc-xin được cung cấp cho các phân vị HPI trên <a href="/vi/vaccines/#California-vaccines-dashboard">bảng dữ liệu về vắc-xin</a> của chúng tôi.</p>
+<p>Bốn mươi phần trăm (40%) ca nhiễm và tử vong do COVID-19 thuộc góc phần tư thấp nhất của Chỉ Số Địa Điểm Khỏe Mạnh (HPI). <a href="https://healthyplacesindex.org/">Chỉ Số Địa Điểm Khỏe Mạnh</a>, do Liên Minh Y Tế Công Cộng Nam California phát triển, giúp chúng tôi hình dung được các điều kiện của cộng đồng như thu nhập thấp, trình độ học vấn và khả năng tiếp cận dịch vụ chăm sóc sức khỏe. Để chấm dứt đại dịch, chúng tôi đang dành ra bốn mươi phần trăm (40%) vắc-xin để phân phối cho những người thuộc góc phần tư HPI 1. Phương pháp này sẽ giúp giảm tỷ lệ mắc bệnh, nhập viện và tử vong trong cộng đồng. Đây cũng sẽ là cách giúp giảm bớt khả năng xuất hiện các biến thể mới. Quý vị có thể theo dõi tiến trình của các loại vắc-xin được cung cấp cho các phân vị HPI trên <a href="/vi/vaccines/#California-vaccines-dashboard">bảng dữ liệu về vắc-xin</a>.</p>
 
 
 
