Update page - vaccines.html 0d227c11254412e607d6b47e82df94d0d23d6b2a

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 19, 2021 at 12:05 PM</p>
+            <p class="small-text">Last updated&nbsp;March 22, 2021 at 7:24 AM</p>
           
         </div>
       </div>
@@ -1097,7 +1097,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Are massage therapists eligible for Phase 1A?</h4>
+            <h4>Are massage therapists eligible for the COVID-19 vaccine under Phase 1A?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -1120,7 +1120,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Are janitors eligible for a vaccine?</h4>
+            <h4>Are janitors eligible for the COVID-19 vaccine now?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
@@ -1670,7 +1670,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true" tabindex="-1">
                   <div class="card-body">
-            <p>No, there is no mandatory vaccination requirement from either the state or federal government.  Once more and more Californians see how safe and effective the COVID-19 vaccines are, we hope they will voluntarily opt to receive them.</p>
+            <p>No, there is no mandatory vaccination requirement from either the state or federal government.&nbsp; Once more and more Californians see how safe and effective the COVID-19 vaccines are, we hope they will voluntarily opt to receive them.</p>
 
                   </div>
                 </div>
