ADD pages/guidancefeed/cdph/df60760a71e72387e9f46530f17373f2.html 0a1bab3a149739b9df30905235bd64c36a2690a9

--- a/ko/latest-news/index.html
+++ b/ko/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19에 대한 최신 뉴스</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 22일 오후 2:54</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 22일 오후 3:07</p>
           
         </div>
       </div>
@@ -163,6 +163,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--47676 -->March 22, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom today announced that General Fund revenues are running $14.3 billion above January’s revenue forecast, with receipts for February exceeding the month’s projections by $3.8 billion. Near...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-096.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#359)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--df60760a71e72387e9f46530f17373f2 -->March 21, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
